--- a/approval_managementRepo/ApprovalManagementAPI.DataModel.csproj
+++ b/approval_managementRepo/ApprovalManagementAPI.DataModel.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="5.1.2" />
+    <PackageReference Include="Twilio" Version="5.75.3" />
   </ItemGroup>
 
   <ItemGroup>
